# 2024intern

./: .gitignore  Dockerfile  README.md
aws/: .terraform.lock.hcl  locals.tf  locals2.tf_  main.tf  main2.tf_  provider.tf
dbt/project/: dbt_project.yml
dbt/project/models/_source/: source_tpch.yml
dbt/project/models/base/: base_customer.sql  base_line_item.sql  base_orders.sql  base_part_supplier.sql  base_supplier.sql
dbt/project/models/ods/: customers.sql  nations.sql  orders.sql  orders_items.sql  parts_suppliers.sql
dbt/project/models/wh/: dim_customer.sql  dim_part.sql  dim_part_supplier_xrf.sql  dim_supplier.sql  fct_orders.sql  fct_orders_items.sql  rpt_minimum_cost_suppliers.sql  rpt_pricing_summary.sql
dbt/project_rag/: README.md  dbt_project.yml  package-lock.yml  packages.yml
dbt/project_rag/macros/: rag_answer_udtf.sql
dbt/project_rag/models/_source/: source.yml
dbt/project_rag/models/base/: unique_question.sql  unique_text.sql
docker/: compose.yml  pyproject.toml
snowflake/: .terraform.lock.hcl  locals.tf  locals2.tf_  main.tf  main_extra1.tf_  main_extra2.tf  main_extra2.tf_  provider.tf
